--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -11,9 +12,60 @@ body {
 }
 
 .navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   position: relative;
   width: 100%;
   height: 75px;
   background: #fff;
   padding: 16px 0;
+}
+.navbar .logo {
+  border: 1px solid black;
+}
+.navbar .drop_menu ul {
+  list-style-type: none;
+  font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 20px;
+}
+.navbar .drop_menu ul li {
+  padding: 24px 16px;
+}
+.navbar .drop_menu ul li:hover {
+  background: #04AA6D;
+}
+.navbar .drop_menu ul li:hover a {
+  color: #fff;
+}
+.navbar .drop_menu ul a {
+  color: #000;
+  text-decoration: none;
+  font-weight: 600;
 }
