--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -13,9 +14,36 @@ body {
 }
 
 .navbar {
+    @include flex(row);
+    justify-content: flex-start;
     position: relative;
     width: 100%;
     height: 75px;
     background: #fff;
     padding: 16px 0;
+    .logo {
+        border: 1px solid black
+    }
+    .drop_menu {
+        ul {
+            list-style-type: none;
+            font-size: 18px;
+            @include flex(row);
+            gap: 20px;
+            li {
+                padding: 24px 16px;
+                &:hover {
+                    a {
+                        color: #fff;
+                    }
+                    background: $primary-color;
+                }
+            }
+            a {
+                color: #000;
+                text-decoration: none;
+                font-weight: 600;
+            }
+        }
+    }
 }
