--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,24 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  position: relative;
   width: 100%;
-  height: 75px;
+  height: 85px;
   background: #fff;
-  padding: 16px 0;
+  position: relative;
 }
 .navbar .logo {
-  border: 1px solid black;
+  margin: 0 15px;
+  padding: 0 16px;
+}
+.navbar .logo img {
+  width: 50px;
+}
+.navbar .drop_menu {
+  height: 100%;
+  margin-right: 85px;
 }
 .navbar .drop_menu ul {
+  height: 100%;
   list-style-type: none;
   font-size: 18px;
   display: -webkit-box;
@@ -53,10 +61,23 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: 20px;
+  gap: 25px;
 }
 .navbar .drop_menu ul li {
-  padding: 24px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 100%;
 }
 .navbar .drop_menu ul li:hover {
   background: #04AA6D;
@@ -67,5 +88,79 @@ body {
 .navbar .drop_menu ul a {
   color: #000;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
+}
+.navbar .icon_menu {
+  height: 100%;
+}
+.navbar .icon_menu ul {
+  height: 100%;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.navbar .icon_menu ul li {
+  padding: 8px 12px;
+}
+.navbar .icon_menu ul li a {
+  font-size: 22px;
+  color: #000;
+  text-decoration: none;
+  font-weight: 500;
+}
+.navbar .buttons_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 10px;
+}
+.navbar .buttons_menu .btn {
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  border-radius: 22px;
+  background: transparent;
+}
+.navbar .buttons_menu .btn:hover {
+  background: #059862;
+  color: #fff;
+}
+.navbar .buttons_menu .btn span {
+  padding: 8px 17px;
+}
+.navbar .buttons_menu .btn.warning {
+  background: #FFC0C7;
+}
+.navbar .buttons_menu .btn.warning:hover {
+  background: #04AA6D;
+  color: #fff;
+}
+.navbar .buttons_menu .btn.success {
+  background: #04AA6D;
+  color: #fff;
+}
+.navbar .buttons_menu .btn.success:hover {
+  background: #059862;
 }
