--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@
 }
 
 body {
-  background: #282A35;
+  background: #fff;
+  overflow-x: hidden;
 }
 
 .navbar {
+  padding: 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,26 +27,42 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 85px;
   background: #fff;
   position: relative;
 }
-.navbar .logo {
+.navbar .left_menus {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.navbar .left_menus .logo {
   margin: 0 15px;
   padding: 0 16px;
 }
-.navbar .logo img {
+.navbar .left_menus .logo img {
   width: 50px;
 }
-.navbar .drop_menu {
+.navbar .left_menus .drop_menu {
   height: 100%;
   margin-right: 85px;
 }
-.navbar .drop_menu ul {
+.navbar .left_menus .drop_menu ul {
   height: 100%;
   list-style-type: none;
   font-size: 18px;
@@ -61,9 +79,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: 25px;
+  gap: 5px;
 }
-.navbar .drop_menu ul li {
+.navbar .left_menus .drop_menu ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,22 +96,57 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   height: 100%;
+  padding: 0 16px;
 }
-.navbar .drop_menu ul li:hover {
+.navbar .left_menus .drop_menu ul li i {
+  font-size: 15px;
+  -webkit-transform: scaleY(0.7);
+          transform: scaleY(0.7);
+}
+.navbar .left_menus .drop_menu ul li:hover {
   background: #04AA6D;
 }
-.navbar .drop_menu ul li:hover a {
+.navbar .left_menus .drop_menu ul li:hover a {
   color: #fff;
 }
-.navbar .drop_menu ul a {
+.navbar .left_menus .drop_menu ul a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   color: #000;
   text-decoration: none;
   font-weight: 500;
 }
-.navbar .icon_menu {
+.navbar .right_menus {
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.navbar .right_menus .icon_menu {
   height: 100%;
 }
-.navbar .icon_menu ul {
+.navbar .right_menus .icon_menu ul {
   height: 100%;
   list-style-type: none;
   display: -webkit-box;
@@ -110,16 +163,19 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
 }
-.navbar .icon_menu ul li {
+.navbar .right_menus .icon_menu ul li {
   padding: 8px 12px;
 }
-.navbar .icon_menu ul li a {
+.navbar .right_menus .icon_menu ul li a {
   font-size: 22px;
   color: #000;
   text-decoration: none;
   font-weight: 500;
 }
-.navbar .buttons_menu {
+.navbar .right_menus .icon_menu ul li a i:hover {
+  color: #04AA6D;
+}
+.navbar .right_menus .buttons_menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -135,32 +191,174 @@ body {
           flex-direction: row;
   gap: 10px;
 }
-.navbar .buttons_menu .btn {
+.navbar .right_menus .buttons_menu .btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   border: none;
   font-size: 18px;
   font-weight: 500;
-  padding: 8px 16px;
-  border-radius: 22px;
+  padding: 2px 18px;
+  border-radius: 25px;
   background: transparent;
 }
-.navbar .buttons_menu .btn:hover {
+.navbar .right_menus .buttons_menu .btn:hover {
   background: #059862;
   color: #fff;
 }
-.navbar .buttons_menu .btn span {
-  padding: 8px 17px;
+.navbar .right_menus .buttons_menu .btn span {
+  padding: 8px 0;
 }
-.navbar .buttons_menu .btn.warning {
+.navbar .right_menus .buttons_menu .btn.warning {
   background: #FFC0C7;
 }
-.navbar .buttons_menu .btn.warning:hover {
+.navbar .right_menus .buttons_menu .btn.warning:hover {
   background: #04AA6D;
   color: #fff;
 }
-.navbar .buttons_menu .btn.success {
+.navbar .right_menus .buttons_menu .btn.success {
+  width: 120px;
   background: #04AA6D;
   color: #fff;
 }
-.navbar .buttons_menu .btn.success:hover {
+.navbar .right_menus .buttons_menu .btn.success:hover {
   background: #059862;
+}
+.navbar .new_tag {
+  margin-left: 5px;
+  font-size: 10px;
+  font-weight: 700;
+  padding: 3px 9px !important;
+  border-radius: 15px;
+  background: #fff;
+  border: solid 1px #000;
+  color: #000 !important;
+}
+
+.search {
+  position: relative;
+  width: 100%;
+  height: 486px;
+  background: #282A35;
+  padding: 90px 0;
+  row-gap: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.search .title {
+  font-size: 70px;
+  color: #fff;
+}
+.search .sub_title {
+  font-size: 23px;
+  color: #FFC0C7;
+  font-weight: 500;
+}
+.search .searchBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: auto;
+  height: 50px;
+  overflow: hidden;
+  position: relative;
+}
+.search .searchBtn input {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  height: 100%;
+  width: 425px;
+  padding: 10px 10px 10px 25px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  font-weight: 600;
+}
+.search .searchBtn input:focus {
+  border-bottom-left-radius: 0;
+}
+.search .searchBtn .logo {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  height: 100%;
+  width: 100px;
+  padding: 10px;
+  background: #04AA6D;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.search .searchBtn .logo:hover {
+  background: #059862;
+}
+.search .searchBtn .logo i {
+  font-size: 30px;
+  color: #fff;
+}
+.search .link {
+  font-size: 23px;
+  font-weight: 600;
+  color: #fff;
+}
+.search .link:hover {
+  color: #04AA6D;
+}
+
+.spacer {
+  aspect-ratio: 960/300;
+  width: 100%;
+  height: 50px;
+  overflow: hidden;
+}
+
+.html {
+  -webkit-transform: translateY(-7px);
+          transform: translateY(-7px);
+  height: 530px;
+  padding: 32px 0;
+  background: #D9EEE1;
 }
