--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ body {
 .search {
   position: relative;
   width: 100%;
-  height: 486px;
+  height: 540px;
   background: #282A35;
   padding: 90px 0;
   row-gap: 30px;
@@ -356,9 +356,106 @@ body {
 }
 
 .html {
+  background: #D9EEE1;
   -webkit-transform: translateY(-7px);
           transform: translateY(-7px);
-  height: 530px;
+  height: 610px;
   padding: 32px 0;
-  background: #D9EEE1;
+  padding: 80px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-column-gap: 480px;
+     -moz-column-gap: 480px;
+          column-gap: 480px;
+}
+.html .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.html .content .title {
+  font-size: 100px;
+}
+.html .content .subtitle {
+  font-size: 19px;
+  margin-bottom: 30px;
+}
+.html .content .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 25px;
+}
+.html .content .buttons .btn {
+  width: 220px;
+  height: 50px;
+  border-radius: 25px;
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+}
+.html .content .buttons .btn.learn {
+  background: #04AA6D;
+  color: #fff;
+}
+.html .content .buttons .btn.video {
+  background: #FFF4A3;
+  position: relative;
+}
+.html .content .buttons .btn.video::before {
+  position: absolute;
+  font-size: 16px;
+  top: -10px;
+  left: -10%;
+  -webkit-transform: rotate(-20deg);
+          transform: rotate(-20deg);
+  content: "New";
+  padding: 6px 16px;
+  background: #FFC0C7;
+  border-radius: 20px;
+}
+.html .content .buttons .btn.reference {
+  background: #282A35;
+  color: #fff;
+}
+
+.css {
+  -webkit-transform: translateY(-7px);
+          transform: translateY(-7px);
+  background: #FFF4A3;
+  height: 530px;
 }
