--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,7 +142,7 @@ body {
 .search {
     position: relative;
     width: 100%;
-    height: 486px;
+    height: 540px;
     background: $body-color;
     padding: 90px 0;
     row-gap: 30px;
@@ -215,8 +215,65 @@ body {
 }
 
 .html {
-    transform: translateY(-7px);
-    height: 530px;
-    padding: 32px 0;
     background: $third-color;
+    transform: translateY(-7px);
+    height: 610px;
+    padding: 32px 0;
+    padding: 80px 0;
+    @include flex(row);
+    align-items: flex-start;
+    column-gap: 480px;
+    .content {
+        @include flex(column);
+        .title {
+            font-size: 100px;
+        }
+        .subtitle {
+            font-size: 19px;
+            margin-bottom: 30px
+        }
+        .buttons {
+            @include flex(column);
+            row-gap: 25px;
+            .btn {
+                width: 220px;
+                height: 50px;
+                border-radius: 25px;
+                border: none;
+                font-size: 18px;
+                font-weight: 500;
+                &.learn{
+                    background: $primary-color;
+                    color: #fff;
+                }
+
+                &.video{
+                    background: $css-color;
+                    position: relative;
+                    &::before {
+                        position: absolute;
+                        font-size: 16px;
+                        top: -10px;
+                        left: -10%;
+                        transform: rotate(-20deg);
+                        content: 'New';
+                        padding: 6px 16px;
+                        background: $warning-color;
+                        border-radius: 20px;
+                    }
+                }
+
+                &.reference{
+                    background: $body-color;
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
+
+.css {
+    transform: translateY(-7px);
+    background: $css-color;
+    height: 530px;
 }
