--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "variables";
 @import "mixins";
 
@@ -214,15 +215,14 @@ body {
     overflow: hidden;
 }
 
-.html {
+.html, .css {
+    @include flex(row);
+    justify-content: space-evenly;
+    align-items: flex-start;
     background: $third-color;
     transform: translateY(-7px);
     height: 610px;
-    padding: 32px 0;
-    padding: 80px 0;
-    @include flex(row);
-    align-items: flex-start;
-    column-gap: 480px;
+    padding: 80px 200px;
     .content {
         @include flex(column);
         .title {
@@ -270,10 +270,74 @@ body {
             }
         }
     }
+    .example {
+        @include flex(column);
+        align-items: flex-start;
+        justify-content: center;
+        width: 630px;
+        padding: 32px 16px;
+        background: #E7E9EB;
+        border-radius: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        position: relative;
+        h1 {
+            font-size: 24px;
+            font-weight: 400;
+        }
+        .example_code {
+            width: 100%;
+            height: auto;
+            background: #fff;
+            border-left: solid 5px $primary-color;
+            margin: 16px 0;
+            padding: 8px 12px;
+            pre {
+                @include flex(column);
+                    align-items: flex-start;
+                code {
+                    @include flex(column);
+                    align-items: flex-start;
+                    font-family: 'Inconsolata', monospace;
+                    span {
+                        font-family: 'Inconsolata', monospace;
+                        color: #A52A2A;
+                        &.red {
+                            color: #ff0000;
+                        }
+                    }
+                }
+            }
+        }
+        .btn {
+            padding: 8px 48px;
+            font-size: 18px;
+            font-weight: 600;
+            background: $primary-color;
+            color: #fff;
+            border: none;
+            outline: none;
+            border-radius: 25px;
+            &:hover {
+                background: $secondary-color;
+            }
+        }
+    }
 }
 
 .css {
     transform: translateY(-7px);
     background: $css-color;
     height: 530px;
+    .example {
+        pre {
+            border: 1px solid red;
+            @include flex(column);
+            align-items: flex-start;
+            code {
+                @include flex(column);
+                align-items: flex-start;
+                border: 1px solid red;
+            }
+        }
+    }
 }
