--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,3 +4,6 @@ $third-color: #D9EEE1;
 $body-color: #282A35;
 $warning-color: #FFC0C7;
 $css-color: #FFF4A3;
+$js-color: #282A35;
+$python-color: #F3ECEA;
+$sql-color: #96D4D4; 
