--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@
 body {
   background: #fff;
   overflow-x: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .navbar {
@@ -355,7 +368,7 @@ body {
   overflow: hidden;
 }
 
-.html, .css {
+.html, .css, .javaScript, .python, .sql {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -376,12 +389,11 @@ body {
       -ms-flex-align: start;
           align-items: flex-start;
   background: #D9EEE1;
-  -webkit-transform: translateY(-7px);
-          transform: translateY(-7px);
-  height: 610px;
-  padding: 80px 200px;
+  height: auto;
+  width: 100%;
+  padding: 80px 100px;
 }
-.html .content, .css .content {
+.html .content, .css .content, .javaScript .content, .python .content, .sql .content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -396,14 +408,14 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.html .content .title, .css .content .title {
+.html .content .title, .css .content .title, .javaScript .content .title, .python .content .title, .sql .content .title {
   font-size: 100px;
 }
-.html .content .subtitle, .css .content .subtitle {
+.html .content .subtitle, .css .content .subtitle, .javaScript .content .subtitle, .python .content .subtitle, .sql .content .subtitle {
   font-size: 19px;
   margin-bottom: 30px;
 }
-.html .content .buttons, .css .content .buttons {
+.html .content .buttons, .css .content .buttons, .javaScript .content .buttons, .python .content .buttons, .sql .content .buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -419,7 +431,7 @@ body {
           flex-direction: column;
   row-gap: 25px;
 }
-.html .content .buttons .btn, .css .content .buttons .btn {
+.html .content .buttons .btn, .css .content .buttons .btn, .javaScript .content .buttons .btn, .python .content .buttons .btn, .sql .content .buttons .btn {
   width: 220px;
   height: 50px;
   border-radius: 25px;
@@ -427,15 +439,18 @@ body {
   font-size: 18px;
   font-weight: 500;
 }
-.html .content .buttons .btn.learn, .css .content .buttons .btn.learn {
+.html .content .buttons .btn.learn, .css .content .buttons .btn.learn, .javaScript .content .buttons .btn.learn, .python .content .buttons .btn.learn, .sql .content .buttons .btn.learn {
   background: #04AA6D;
   color: #fff;
 }
-.html .content .buttons .btn.video, .css .content .buttons .btn.video {
+.html .content .buttons .btn.learn:hover, .css .content .buttons .btn.learn:hover, .javaScript .content .buttons .btn.learn:hover, .python .content .buttons .btn.learn:hover, .sql .content .buttons .btn.learn:hover {
+  background: #059862;
+}
+.html .content .buttons .btn.video, .css .content .buttons .btn.video, .javaScript .content .buttons .btn.video, .python .content .buttons .btn.video, .sql .content .buttons .btn.video {
   background: #FFF4A3;
   position: relative;
 }
-.html .content .buttons .btn.video::before, .css .content .buttons .btn.video::before {
+.html .content .buttons .btn.video::before, .css .content .buttons .btn.video::before, .javaScript .content .buttons .btn.video::before, .python .content .buttons .btn.video::before, .sql .content .buttons .btn.video::before {
   position: absolute;
   font-size: 16px;
   top: -10px;
@@ -447,11 +462,11 @@ body {
   background: #FFC0C7;
   border-radius: 20px;
 }
-.html .content .buttons .btn.reference, .css .content .buttons .btn.reference {
+.html .content .buttons .btn.reference, .css .content .buttons .btn.reference, .javaScript .content .buttons .btn.reference, .python .content .buttons .btn.reference, .sql .content .buttons .btn.reference {
   background: #282A35;
   color: #fff;
 }
-.html .example, .css .example {
+.html .example, .css .example, .javaScript .example, .python .example, .sql .example {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -477,19 +492,20 @@ body {
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   position: relative;
 }
-.html .example h1, .css .example h1 {
+.html .example h1, .css .example h1, .javaScript .example h1, .python .example h1, .sql .example h1 {
   font-size: 24px;
   font-weight: 400;
 }
-.html .example .example_code, .css .example .example_code {
+.html .example .example_code, .css .example .example_code, .javaScript .example .example_code, .python .example .example_code, .sql .example .example_code {
   width: 100%;
   height: auto;
+  min-height: 200px;
   background: #fff;
   border-left: solid 5px #04AA6D;
   margin: 16px 0;
   padding: 8px 12px;
 }
-.html .example .example_code pre, .css .example .example_code pre {
+.html .example .example_code pre, .css .example .example_code pre, .javaScript .example .example_code pre, .python .example .example_code pre, .sql .example .example_code pre {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -507,7 +523,7 @@ body {
       -ms-flex-align: start;
           align-items: flex-start;
 }
-.html .example .example_code pre code, .css .example .example_code pre code {
+.html .example .example_code pre code, .css .example .example_code pre code, .javaScript .example .example_code pre code, .python .example .example_code pre code, .sql .example .example_code pre code {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -526,14 +542,14 @@ body {
           align-items: flex-start;
   font-family: "Inconsolata", monospace;
 }
-.html .example .example_code pre code span, .css .example .example_code pre code span {
+.html .example .example_code pre code span, .css .example .example_code pre code span, .javaScript .example .example_code pre code span, .python .example .example_code pre code span, .sql .example .example_code pre code span {
   font-family: "Inconsolata", monospace;
   color: #A52A2A;
 }
-.html .example .example_code pre code span.red, .css .example .example_code pre code span.red {
+.html .example .example_code pre code span.red, .css .example .example_code pre code span.red, .javaScript .example .example_code pre code span.red, .python .example .example_code pre code span.red, .sql .example .example_code pre code span.red {
   color: #ff0000;
 }
-.html .example .btn, .css .example .btn {
+.html .example .btn, .css .example .btn, .javaScript .example .btn, .python .example .btn, .sql .example .btn {
   padding: 8px 48px;
   font-size: 18px;
   font-weight: 600;
@@ -543,51 +559,56 @@ body {
   outline: none;
   border-radius: 25px;
 }
-.html .example .btn:hover, .css .example .btn:hover {
+.html .example .btn:hover, .css .example .btn:hover, .javaScript .example .btn:hover, .python .example .btn:hover, .sql .example .btn:hover {
   background: #059862;
 }
 
 .css {
-  -webkit-transform: translateY(-7px);
-          transform: translateY(-7px);
   background: #FFF4A3;
   height: 530px;
 }
-.css .example pre {
+.css .example .example_code pre code span {
   border: 1px solid red;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
 }
-.css .example pre code {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  border: 1px solid red;
+
+.javaScript {
+  background: #282A35;
+  height: 530px;
+}
+.javaScript .title {
+  font-size: 80px !important;
+  color: #fff;
+}
+.javaScript .subtitle {
+  color: #fff;
+}
+.javaScript .content .buttons {
+  color: #fff;
+}
+.javaScript .content .buttons .btn.reference {
+  background: #fff;
+  color: #000;
+}
+.javaScript .content .buttons .btn.reference:hover {
+  background: #cfcdcd;
+}
+
+.python {
+  background: #F3ECEA;
+}
+.python .title {
+  font-size: 70px !important;
+}
+
+.sql {
+  background: #96D4D4;
+}
+.sql .title {
+  font-size: 70px !important;
+}
+
+.library {
+  width: 100%;
+  height: 1000px;
+  background: #282A35;
 }
