--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -45,3 +45,8 @@ $selection-color: #AD2A2A;
 
 $instruction-active-color: #BBA5C5;
 $selection-active-color: #69C2BB;
+
+//libraries colors
+$php-color: #FFC0C7;
+$jquery-color: #FFF4A3;
+$java-color: #F3ECEA;
