--- a/css/style.css
+++ b/css/style.css
@@ -699,8 +699,63 @@ body {
   color: #0000CD;
 }
 
-.library {
+.libraries {
   width: 100%;
-  height: 1000px;
+  height: auto;
+  padding: 64px 0;
   background: #282A35;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+}
+.libraries .library {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 700px;
+  min-width: 470px;
+  width: 90%;
+  height: 265px;
+  padding: 24px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.libraries .library .title {
+  font-size: 45px;
+}
+.libraries .library .subtitle {
+  font-size: 18px;
+}
+.libraries .library .btn {
+  width: 200px;
+  margin-top: 30px;
+  background: #282A35;
+  color: #fff;
+  font-size: 18px;
+  padding: 8px 16px;
+  outline: none;
+  border: none;
+  border-radius: 25px;
+}
+.libraries .library.php {
+  background: #FFC0C7;
+}
+.libraries .library.jquery {
+  background: #FFF4A3;
+}
+.libraries .library.java {
+  background: #F3ECEA;
 }
