--- a/scss/style.scss
+++ b/scss/style.scss
@@ -498,8 +498,51 @@ body {
     }
 }
 
-.library {
+.libraries {
     width: 100%;
-    height: 1000px;
-    background: $body-color
+    height: auto;
+    padding: 64px 0;
+    background: $body-color;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    .library {
+        @include flex(column);
+        max-width: 700px;
+        min-width: 470px;
+        width: 90%;
+        height: 265px;
+        padding: 24px;
+        border-radius: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        .title {
+            font-size: 45px;
+        }
+
+        .subtitle {
+            font-size: 18px;
+        }
+
+        .btn {
+            width: 200px;
+            margin-top: 30px;
+            background: $body-color;
+            color: #fff;
+            font-size: 18px;
+            padding: 8px 16px;
+            outline: none;
+            border: none;
+            border-radius: 25px;
+        }
+
+        &.php {
+            background: $php-color;
+        }
+        &.jquery {
+            background: $jquery-color;
+        }
+        &.java {
+            background: $java-color;
+        }
+    }
 }
